unmaximize from partial to enter quick tiling

BUG: 345423
FIXED-IN: 5.3